force-app/main/default/objects/Integration_Queue_Configuration__mdt/Integration_Queue_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Integration Queue to do External Portal Sync</description>
    <label>Integration Queue Configuration</label>
    <pluralLabel>Integration Queue Configurations</pluralLabel>
</CustomObject>