force-app/main/default/objects/Integration_Queue_Configuration__mdt/fields/Named_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Named_Credentials__c</fullName>
    <inlineHelpText>The named credential API name to be used for web service callout.</inlineHelpText>
    <label>Named Credentials</label>
    <length>100</length>
    <type>Text</type>
</CustomField>