force-app/main/default/objects/Integration_Queue_Configuration__mdt/fields/Success_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Success_Status_Code__c</fullName>
    <inlineHelpText>The possible HTTP success status codes in semi-colon separated value e.g., 200;201.</inlineHelpText>
    <label>Success Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>