force-app/main/default/objects/Integration_Queue_Configuration__mdt/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Portal</fullName>
                <default>true</default>
                <label>External Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>